--- a/css/style.css
+++ b/css/style.css
@@ -201,8 +201,8 @@ a.hs-totop-link {
 .hs-headline .img-wrap img {
     width: 140px;
     height: 140px;
-    padding: 5px;
-    opacity: 0.5;
+    padding: 0;
+    opacity: 0.9;
 }
 
 .hs-headline .profile_info {
