changed font-display to swap

--- a/css/fonts.less
+++ b/css/fonts.less
@@ -1,7 +1,7 @@
 /* cyrillic-ext */
 @font-face {
 	font-family: 'Montserrat';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 400;
 	src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');
@@ -10,7 +10,7 @@
   /* cyrillic */
   @font-face {
 	font-family: 'Montserrat';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 400;
 	src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
@@ -19,7 +19,7 @@
   /* vietnamese */
   @font-face {
 	font-family: 'Montserrat';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 400;
 	src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format('woff2');
@@ -28,7 +28,7 @@
   /* latin-ext */
   @font-face {
 	font-family: 'Montserrat';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 400;
 	src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');
@@ -37,7 +37,7 @@
   /* latin */
   @font-face {
 	font-family: 'Montserrat';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 400;
 	src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');
@@ -47,7 +47,7 @@
   /* latin-ext */
 @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 200;
 	src: local('Raleway ExtraLight'), local('Raleway-ExtraLight'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptrg8zYS_SKggPNwOIpWqhPAMif.woff2) format('woff2');
@@ -56,7 +56,7 @@
   /* latin */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 200;
 	src: local('Raleway ExtraLight'), local('Raleway-ExtraLight'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptrg8zYS_SKggPNwOIpWqZPAA.woff2) format('woff2');
@@ -65,7 +65,7 @@
   /* latin-ext */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 300;
 	src: local('Raleway Light'), local('Raleway-Light'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptrg8zYS_SKggPNwIYqWqhPAMif.woff2) format('woff2');
@@ -74,7 +74,7 @@
   /* latin */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 300;
 	src: local('Raleway Light'), local('Raleway-Light'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptrg8zYS_SKggPNwIYqWqZPAA.woff2) format('woff2');
@@ -83,7 +83,7 @@
   /* latin-ext */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 400;
 	src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptug8zYS_SKggPNyCMIT5lu.woff2) format('woff2');
@@ -92,7 +92,7 @@
   /* latin */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 400;
 	src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptug8zYS_SKggPNyC0ITw.woff2) format('woff2');
@@ -101,7 +101,7 @@
   /* latin-ext */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 500;
 	src: local('Raleway Medium'), local('Raleway-Medium'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptrg8zYS_SKggPNwN4rWqhPAMif.woff2) format('woff2');
@@ -110,7 +110,7 @@
   /* latin */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 500;
 	src: local('Raleway Medium'), local('Raleway-Medium'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptrg8zYS_SKggPNwN4rWqZPAA.woff2) format('woff2');
@@ -119,7 +119,7 @@
   /* latin-ext */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 600;
 	src: local('Raleway SemiBold'), local('Raleway-SemiBold'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptrg8zYS_SKggPNwPIsWqhPAMif.woff2) format('woff2');
@@ -128,7 +128,7 @@
   /* latin */
   @font-face {
 	font-family: 'Raleway';
-	font-display: auto;
+	font-display: swap;
 	font-style: normal;
 	font-weight: 600;
 	src: local('Raleway SemiBold'), local('Raleway-SemiBold'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptrg8zYS_SKggPNwPIsWqZPAA.woff2) format('woff2');
