fix: Update status

--- a/css/style.css
+++ b/css/style.css
@@ -937,7 +937,7 @@ ul.marquee li {
     height: 28px;
     font-size: 10px;
     line-height: 28px;
-    color: #63a924;
+    color: #a95924;
     text-align: center;
 }
 
