--- a/style.css
+++ b/style.css
@@ -4343,6 +4343,7 @@ body {
 
 .fancybox-inline-box .inline-embed-image {
     width: 100%;
+    border-bottom: 1px solid grey;
 }
 
 .fancybox-inline-box .inline-embed-image img {
