--- a/style.css
+++ b/style.css
@@ -5299,11 +5299,9 @@ body {
     bottom: 0;
 }
 
-#map .map-icon {
-    font-size: 55px;
-    line-height: 55px;
-    text-align: center;
-    white-space: nowrap;
+#map iframe {
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 767px) {
