--- a/fonts/icomoon/style.css
+++ b/fonts/icomoon/style.css
@@ -7,6 +7,7 @@
         url('fonts/icomoon.svg?vqltqj#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 [class^="rsicon-"], [class*=" rsicon-"] {
